unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Abbreviated_Product_Info__c.field-meta.xml
<CustomField>
    <fullName>Abbreviated_Product_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Condensed Product Information Table in Conga Output Document</inlineHelpText>
    <label>Abbreviated_Product_Info</label>
    <type>Checkbox</type>
</CustomField>