unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/ABC_Code_1_Sales_Inventory__c.field-meta.xml
<CustomField>
    <fullName>ABC_Code_1_Sales_Inventory__c</fullName>
    <label>Class</label>
    <length>3</length>
    <type>Text</type>
</CustomField>