unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Actual_Cash_Discount__c.field-meta.xml
<CustomField>
    <fullName>Actual_Cash_Discount__c</fullName>
    <formula>IF( ISBLANK( Cash_Discount_Override__c ), Default_Cash_Discount__c ,Cash_Discount_Override__c )</formula>
    <label>Actual Cash Discount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>