unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Actual_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Actual_Rebate__c</fullName>
    <formula>IF( ISBLANK(  Rebate_Override__c  ), Default_Rebate__c ,Rebate_Override__c )</formula>
    <label>Actual Rebate %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>