unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Agent_Commission_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Agent_Commission_Percentage__c</fullName>
    <label>Agent Commission Percentage</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>