unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Agent_Warehouse_Commission_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Agent_Warehouse_Commission_Percentage__c</fullName>
    <label>Agent Warehouse Commission Percentage</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>