unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Agent_Warehouse_Commissions_Amount__c.field-meta.xml
<CustomField>
    <fullName>Agent_Warehouse_Commissions_Amount__c</fullName>
    <formula>Agent_Warehouse_Commission_Percentage__c * ( SBQQ__NetTotal__c - (Freight_Adder__c*SBQQ__Quantity__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Warehouse Commissions Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>