unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Approval_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Approval_Threshold__c</fullName>
    <label>Approval Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>