unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/ASP__c.field-meta.xml
<CustomField>
    <fullName>ASP__c</fullName>
    <formula>SBQQ__NetTotal__c /   Line_Item_Weight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ASP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>