unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Below_Approval_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Below_Approval_Threshold__c</fullName>
    <formula>IF(Multiplier__c &lt;  Approval_Threshold__c, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Below Approval Threshold</label>
    <type>Checkbox</type>
</CustomField>