unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Cash_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cash_Discount_Amount__c</fullName>
    <formula>Actual_Cash_Discount__c *  Net_Total_Less_Freight_Adder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cash Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>