unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Cash_Discount_Override__c.field-meta.xml
<CustomField>
    <fullName>Cash_Discount_Override__c</fullName>
    <formula>CASE( Pricing_Division_Code__c , &#39;CORRRES&#39;,  SBQQ__Quote__r.Cash_Discount_Override_Aluminum_Conduit__c , &#39;ALFITT&#39;,  SBQQ__Quote__r.Cash_Discount_Override_Conduit_Cable_Fit__c, &#39;ECN&#39;,   SBQQ__Quote__r.Cash_Discount_Override_ECN__c , &#39;AFC&#39;,  SBQQ__Quote__r.AFC_Cash_Discount_Override__c , &#39;MTLFRM&#39;,  SBQQ__Quote__r.Cash_Discount_Override_Metal_Framing__c , &#39;PVCCON&#39;,  SBQQ__Quote__r.Cash_Discount_Override_PVC_Conduit__c, &#39;PVCFIT&#39;,  SBQQ__Quote__r.Cash_Discount_Override_PVC_Fittings__c , &#39;STEELCON&#39;,  SBQQ__Quote__r.Cash_Discount_Override_Steel_Conduit__c,null)</formula>
    <label>Cash Discount % Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>