unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Category_Code_9__c.field-meta.xml
<CustomField>
    <fullName>Category_Code_9__c</fullName>
    <label>Item Group</label>
    <length>150</length>
    <type>Text</type>
</CustomField>