unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Category_Code_9_DISPLAY__c.field-meta.xml
<CustomField>
    <fullName>Category_Code_9_DISPLAY__c</fullName>
    <formula>Category_Code_9__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Group</label>
    <type>Text</type>
</CustomField>