unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Commissions_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commissions_Amount__c</fullName>
    <formula>Agent_Commission_Percentage__c * ( SBQQ__NetTotal__c - (Freight_Adder__c*Quantity_user__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commissions Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>