unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Current_Cost_PUM__c.field-meta.xml
<CustomField>
    <fullName>Current_Cost_PUM__c</fullName>
    <formula>Current_Cost__c *  Pricing_Per__c</formula>
    <label>Current Cost (PUM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>