unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Customer_Group_Key__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group_Key__c</fullName>
    <label>Customer Group Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>