unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Data_Cannon__c.field-meta.xml
<CustomField>
    <fullName>Data_Cannon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Cannon</label>
    <type>Checkbox</type>
</CustomField>