unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Days_to_Expire__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Expire__c</fullName>
    <label>Days to Expire</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>