unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Default_Cash_Discount__c.field-meta.xml
<CustomField>
    <fullName>Default_Cash_Discount__c</fullName>
    <label>Default Cash Discount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>