unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Default_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Default_Multiplier__c</fullName>
    <label>Default Multiplier</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>