unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Default_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Default_Rebate__c</fullName>
    <label>Default Rebate %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>