unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Display_Default_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Display_Default_Multiplier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Default Multiplier</label>
    <type>Checkbox</type>
</CustomField>