unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Effective_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Effective_Multiplier__c</fullName>
    <formula>IF(
   SBQQ__OriginalPrice__c = 0,
   NULL,
   Quoted_Price_Less_Freight_Adder__c / SBQQ__OriginalPrice__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Multiplier</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>