unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Expired_Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Expired_Quote_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expired Quote Line</label>
    <type>Checkbox</type>
</CustomField>