unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Expired_Stock_Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Expired_Stock_Quote_Line__c</fullName>
    <formula>IF(
    ROUND(Stock_Quote_Original_Price__c,1) !=  ROUND(SBQQ__SpecialPrice__c,1),
    TRUE,
    FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expired Stock Quote Line</label>
    <type>Checkbox</type>
</CustomField>