unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Freight_Added_to_Quoted_Price__c.field-meta.xml
<CustomField>
    <fullName>Freight_Added_to_Quoted_Price__c</fullName>
    <formula>IF(
  Pricing_Division_Code__c = &#39;STEELCON&#39;,
  TRUE,
  FALSE
)</formula>
    <label>Freight Added to Quoted Price</label>
    <type>Checkbox</type>
</CustomField>