unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Freight_Adder__c.field-meta.xml
<CustomField>
    <fullName>Freight_Adder__c</fullName>
    <formula>IF(
    Freight_Added_to_Quoted_Price__c,
    Weight__c * BLANKVALUE( QL_Freight_Adjusted_Rate__c , Freight_Rate_per_100_lbs__c),
    0
)</formula>
    <label>Freight Adder</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>