unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Freight_Cost_per_100_lbs__c.field-meta.xml
<CustomField>
    <fullName>Freight_Cost_per_100_lbs__c</fullName>
    <description>Adjusted label to be per pound but couldn&#39;t change api name</description>
    <label>Freight Cost Per Pound</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>