unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Freight_Rate_per_100_lbs__c.field-meta.xml
<CustomField>
    <fullName>Freight_Rate_per_100_lbs__c</fullName>
    <description>Adjusted the label to be per pound but couldn&#39;t update the api name</description>
    <label>Freight Rate Per Pound</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>