unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/GM_Percentage__c.field-meta.xml
<CustomField>
    <fullName>GM_Percentage__c</fullName>
    <label>GM%</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>