unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Lead_Time_Comments__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time_Comments__c</fullName>
    <label>Lead Time Comments</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>