unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Line_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Description__c</fullName>
    <label>Group Header</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>