unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Line_Item_Weight__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Weight__c</fullName>
    <formula>Quantity_user__c *  Weight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Item Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>