unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Line_Sorter__c.field-meta.xml
<CustomField>
    <fullName>Line_Sorter__c</fullName>
    <formula>IF(
      Pricing_Division_Code__c = &#39;AFC&#39;,
      0,


IF(
   SBQQ__Product__r.Outer_Diameter__c &gt;0, 
   SBQQ__Product__r.Outer_Diameter__c, 
   IF(
     SBQQ__Product__r.Nominal_Gauge__c &gt; 0,
     SBQQ__Product__r.Nominal_Gauge__c,
     IF(
      SBQQ__Product__r.Trade_Size__c &gt; 0, 
      SBQQ__Product__r.Trade_Size__c,
      IF(
       SBQQ__Product__r.Length__c &gt; 0, 
       SBQQ__Product__r.Length__c, 
       0
      )
    )
  )
)


)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Sorter</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>