unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Line_Type__c.field-meta.xml
<CustomField>
    <fullName>Line_Type__c</fullName>
    <formula>SBQQ__Product__r.Line_Type__c</formula>
    <label>Line Type</label>
    <type>Text</type>
</CustomField>