unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Multipler_Variance__c.field-meta.xml
<CustomField>
    <fullName>Multipler_Variance__c</fullName>
    <formula>ROUND(


   Effective_Multiplier__c - IF(Pricing_Type__c = &#39;Net&#39;, SBQQ__ListPrice__c / SBQQ__OriginalPrice__c, Default_Multiplier__c),



3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Multiplier Variance</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>