unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Multiplier_fx__c.field-meta.xml
<CustomField>
    <fullName>Multiplier_fx__c</fullName>
    <formula>Multiplier__c</formula>
    <label>Multiplier</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>