unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Multiplier_Var_DFLT__c.field-meta.xml
<CustomField>
    <fullName>Multiplier_Var_DFLT__c</fullName>
    <formula>IF(
   ISBLANK(Default_Multiplier__c),
   &#39;N/A&#39;,
   TEXT(Multipler_Variance__c) &amp; &quot; (&quot; &amp;  TEXT(Default_Multiplier__c) &amp; &quot;)&quot;
)</formula>
    <label>Multiplier Var (DFLT)</label>
    <type>Text</type>
</CustomField>