unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Name_Description__c.field-meta.xml
<CustomField>
    <fullName>Name_Description__c</fullName>
    <formula>SBQQ__Product__r.Name &amp; &quot; | &quot; &amp; SBQQ__Product__r.Description</formula>
    <label>Name | Description</label>
    <type>Text</type>
</CustomField>