unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Net__c.field-meta.xml
<CustomField>
    <fullName>Net__c</fullName>
    <formula>IF(
   Pricing_Type__c = &#39;Net&#39;,
   &#39;Y&#39;,
   &#39;N&#39;
)</formula>
    <label>Net?</label>
    <type>Text</type>
</CustomField>