unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Net_Total_Less_Freight_Adder__c.field-meta.xml
<CustomField>
    <fullName>Net_Total_Less_Freight_Adder__c</fullName>
    <formula>(SBQQ__SpecialPrice__c - Freight_Adder__c) * SBQQ__Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Total Less Freight Adder</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>