unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Non_standard_bundle_size__c.field-meta.xml
<CustomField>
    <fullName>Non_standard_bundle_size__c</fullName>
    <formula>IF( 
   OR(
      Standard_Bundle_Size__c != 0, 
      Standard_Bundle_Size__c != null
     ),

MOD(Quantity_user__c, Standard_Bundle_Size__c)=0, 

FALSE

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is standard bundle size</label>
    <type>Checkbox</type>
</CustomField>