unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <formula>IF( Non_standard_bundle_size__c = FALSE, 

IMAGE(&quot;https://atkore--uat--c.documentforce.com/servlet/servlet.ImageServer?id=0157d000000TiKO&amp;oid=00D7d0000077h9s&amp;lastMod=1630596381000&quot;, &quot;Nonstandard bundle&quot;, 33, 100), 

&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notes</label>
    <type>Text</type>
</CustomField>