unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/part_number_override__c.field-meta.xml
<CustomField>
    <fullName>part_number_override__c</fullName>
    <label>part number override</label>
    <type>TextArea</type>
</CustomField>