unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/PGMIS6__c.field-meta.xml
<CustomField>
    <fullName>PGMIS6__c</fullName>
    <label>PGMIS6</label>
    <length>150</length>
    <type>Text</type>
</CustomField>