unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/PGSGMT__c.field-meta.xml
<CustomField>
    <fullName>PGSGMT__c</fullName>
    <description>Twin field from Product</description>
    <label>Brand</label>
    <length>60</length>
    <type>Text</type>
</CustomField>