unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Price_Adjustment_Name__c.field-meta.xml
<CustomField>
    <fullName>Price_Adjustment_Name__c</fullName>
    <label>Price Adjustment Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>