unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Price_Div_Item_Grp__c.field-meta.xml
<CustomField>
    <fullName>Price_Div_Item_Grp__c</fullName>
    <formula>Pricing_Division_Code_DISPLAY__c &amp; &quot; (&quot; &amp; Category_Code_9_DISPLAY__c &amp; &quot;)&quot;</formula>
    <label>Price Div (Item Grp)</label>
    <type>Text</type>
</CustomField>