unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Price_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Price_Group_Id__c</fullName>
    <inlineHelpText>Id of Price Group. Used in price rules.</inlineHelpText>
    <label>Price Group Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>