unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Price_Variance__c.field-meta.xml
<CustomField>
    <fullName>Price_Variance__c</fullName>
    <formula>IF(
   (IF(
Pricing_Type__c = &#39;Net&#39;,
SBQQ__ListPrice__c,
SBQQ__ListPrice__c * BLANKVALUE(Default_Multiplier__c , 1)
)) = 0 , 
   0,
   ((IF(
Pricing_Type__c = &#39;Net&#39;,
SBQQ__ListPrice__c,
SBQQ__ListPrice__c * BLANKVALUE(Default_Multiplier__c , 1)
)) - SBQQ__SpecialPrice__c)
                    /
             (IF(
Pricing_Type__c = &#39;Net&#39;,
SBQQ__ListPrice__c,
SBQQ__ListPrice__c * BLANKVALUE(Default_Multiplier__c , 1)
))
)</formula>
    <label>Price Variance %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>