unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Price_Variance_pct__c.field-meta.xml
<CustomField>
    <fullName>Price_Variance_pct__c</fullName>
    <label>Price Variance %</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>