unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Pricing_Division_Code__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Division_Code__c</fullName>
    <label>Pricing Division Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>