unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Pricing_Division_Code_DISPLAY__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Division_Code_DISPLAY__c</fullName>
    <formula>IF( 
    Pricing_Division_Code__c = &#39;COPE&#39;,
    &#39;Cable Management&#39;,
    Pricing_Division_Code__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricing Division Code</label>
    <type>Text</type>
</CustomField>