unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Pricing_Division_Name__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Division_Name__c</fullName>
    <label>Pricing Division Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>