unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Pricing_Division_Output_Doc_Order__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Division_Output_Doc_Order__c</fullName>
    <label>Pricing Division Output Doc Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>