unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Pricing_Group_Membership__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Group_Membership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Group Membership</label>
    <referenceTo>PGM_Pricing_Group_Membership__c</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>