unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Pricing_Group_Membership_Key__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Group_Membership_Key__c</fullName>
    <formula>Pricing_Group_Membership__r.Key__c</formula>
    <label>Pricing Group Membership Key</label>
    <type>Text</type>
</CustomField>