unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Pricing_Per__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Per__c</fullName>
    <formula>SBQQ__Product__r.Pricing_Per__c</formula>
    <label>Pricing Per</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>