unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Pricing_Record__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Record__c</fullName>
    <inlineHelpText>Advance Price (Multiplier or Net) record ID.</inlineHelpText>
    <label>Pricing Record</label>
    <length>18</length>
    <type>Text</type>
</CustomField>