unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Pricing_Type__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Type__c</fullName>
    <label>Pricing Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>