unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Pricing_Type_DISPLAY__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Type_DISPLAY__c</fullName>
    <formula>Pricing_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricing Type</label>
    <type>Text</type>
</CustomField>