unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Product_Swap_Error__c.field-meta.xml
<CustomField>
    <fullName>Product_Swap_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Swap Error</label>
    <type>Checkbox</type>
</CustomField>