unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/QL_Freight_Adjusted_Rate__c.field-meta.xml
<CustomField>
    <fullName>QL_Freight_Adjusted_Rate__c</fullName>
    <label>QL Freight Adjusted Rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>