unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Quantity_user__c.field-meta.xml
<CustomField>
    <fullName>Quantity_user__c</fullName>
    <inlineHelpText>This is the quantity that the user entered on the Quote</inlineHelpText>
    <label>Quantity (User Entered)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>