unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Quote_Template_Grouper__c.field-meta.xml
<CustomField>
    <fullName>Quote_Template_Grouper__c</fullName>
    <formula>Pricing_Division_Name__c &amp; &quot; - &quot; &amp;  Sales_Rpt_06_Product_Line_Revenue__c</formula>
    <label>Quote Template Grouper</label>
    <type>Text</type>
</CustomField>