unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Quoted_Price_Less_Freight_Adder__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Price_Less_Freight_Adder__c</fullName>
    <formula>SBQQ__SpecialPrice__c -   Freight_Adder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quoted Price Less Freight Adder</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>