unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Rebate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Amount__c</fullName>
    <formula>Actual_Rebate__c  *  Net_Total_Less_Freight_Adder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rebate Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>