unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Sales_Rpt_06_Product_Line_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rpt_06_Product_Line_Revenue__c</fullName>
    <label>Sales Rpt 06 - Product Line (Revenue)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>