unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__ProductName__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ProductName__c</fullName>
    <description>Name for the product referenced by this line item.</description>
    <formula>SBQQ__Product__r.Name</formula>
    <inlineHelpText>same as Catalog Number</inlineHelpText>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>