unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ_Description_Display__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_Description_Display__c</fullName>
    <formula>SBQQ__Product__r.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description</label>
    <type>Text</type>
</CustomField>