unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/SBU__c.field-meta.xml
<CustomField>
    <fullName>SBU__c</fullName>
    <label>SBU</label>
    <length>100</length>
    <type>Text</type>
</CustomField>