unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Set_Price__c.field-meta.xml
<CustomField>
    <fullName>Set_Price__c</fullName>
    <label>Set Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>