unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/SG_A__c.field-meta.xml
<CustomField>
    <fullName>SG_A__c</fullName>
    <label>SG&amp;A %</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>