unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/SG_A_Amount__c.field-meta.xml
<CustomField>
    <fullName>SG_A_Amount__c</fullName>
    <formula>SG_A__c * SBQQ__NetTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SG&amp;A Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>