unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Standard_Bundle_Size__c.field-meta.xml
<CustomField>
    <fullName>Standard_Bundle_Size__c</fullName>
    <formula>SBQQ__Product__r.Standard_Bundle_Size__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Standard Bundle Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>