unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/StandardCostBasePrice__c.field-meta.xml
<CustomField>
    <fullName>StandardCostBasePrice__c</fullName>
    <label>Standard_Cost_Base_Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>