unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Stock_Quote_ID__c.field-meta.xml
<CustomField>
    <fullName>Stock_Quote_ID__c</fullName>
    <formula>CASESAFEID(SBQQ__Quote__r.CPQ_Stock_Quote__c)</formula>
    <label>Stock Quote ID</label>
    <type>Text</type>
</CustomField>