unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Stock_Quote_Original_Price__c.field-meta.xml
<CustomField>
    <fullName>Stock_Quote_Original_Price__c</fullName>
    <label>Stock Quote Original Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>