unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Target_Price__c.field-meta.xml
<CustomField>
    <fullName>Target_Price__c</fullName>
    <formula>IF(
   Pricing_Type__c = &#39;Net&#39;,
   SBQQ__ListPrice__c,
   SBQQ__ListPrice__c * BLANKVALUE(Default_Multiplier__c , 1)
)</formula>
    <label>Target Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>