unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Total_Current_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Current_Cost__c</fullName>
    <formula>IF(  ISNULL( StandardCostBasePrice__c ) = FALSE,StandardCostBasePrice__c, Current_Cost__c) *  Quantity_user__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Current Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>