unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Total_Freight_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Freight_Cost__c</fullName>
    <formula>Line_Item_Weight__c * (Freight_Cost_per_100_lbs__c / 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Freight Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>