unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Total_Line_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Line_Cost__c</fullName>
    <label>Total Line Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>