unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Total_Line_Cost_DEP__c.field-meta.xml
<CustomField>
    <fullName>Total_Line_Cost_DEP__c</fullName>
    <formula>Total_Current_Cost__c + Total_Freight_Cost__c + Commissions_Amount__c + SG_A_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Line Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>