unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Unit_of_Measure_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure_Pricing__c</fullName>
    <label>UoM (Pricing)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>