unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/UoM_Base_Price__c.field-meta.xml
<CustomField>
    <fullName>UoM_Base_Price__c</fullName>
    <inlineHelpText>Populated By Price Rule</inlineHelpText>
    <label>UoM (Base Price)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>EA</fullName>
            </value>
            <value>
                <fullName>FT</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>