unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/UoM_Quantity__c.field-meta.xml
<CustomField>
    <fullName>UoM_Quantity__c</fullName>
    <formula>SBQQ__Product__r.Quantity_Unit_Of_Measure__c</formula>
    <label>UoM (Quantity)</label>
    <type>Text</type>
</CustomField>