unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/UPC_Number__c.field-meta.xml
<CustomField>
    <fullName>UPC_Number__c</fullName>
    <label>UPC Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>